ignore old scripts

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ notebooks/functional_connectivity.ipynb
 notebooks/feature_importance.ipynb
 notebooks/bv2bids_ch5.ipynb
 4.1. psd.ipynb
+notebooks/OldScripts.ipynb
