--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ notebooks/feature_importance.ipynb
 notebooks/bv2bids_ch5.ipynb
 4.1. psd.ipynb
 notebooks/OldScripts.ipynb
+notebooks/24222_findBadCh.py
