add xarray_creator script

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ notebooks/bv2bids_ch5.ipynb
 4.1. psd.ipynb
 notebooks/OldScripts.ipynb
 notebooks/24222_findBadCh.py
+notebooks/newDocsCreator.ipynb
